bootstrap/powerdns/wui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdns-wui
  labels:
    app: pdns-wui
spec:
  selector:
    matchLabels:
      app: pdns-wui
  template:
    metadata:
      labels:
        app: pdns-wui
    spec:
      containers:
      - image: ngoduykhanh/powerdns-admin:v0.3.0
        name: powerdns-admin
        ports:
        - name: http
          containerPort: 80
