bootstrap/powerdns/wui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-wui
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.254.254.103"
spec:
  selector:
    app: pdns-wui
  ports:
  - port: 80
    targetPort: http
